# pytrilogyt

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  demo.preql  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  (+170 more)
example_file/: customers_preql_preqlt_gen_model.sql  order.preql
examples/: the_look.py
my-project/: import.py  pyproject.toml
my-project/src/my_project/: definitions.py
my-project/src/my_project/defs/: assets.py
preqlt/: __init__.py  constants.py  core.py  enums.py  exceptions.py  graph.py
pypreqlt/: __init__.py  constants.py  core.py  graph.py
tests/: conftest.py  test_graph.py  test_workspace.py
trilogyt/: __init__.py  constants.py  core.py  core_v2.py  fingerprint.py  graph.py  io.py  models.py
(+1144 files in other folders)
